Update tests; removing junit4